# serialportran

./: README.md  meson.build
src/: main.c  main.f90  serialport_config.f90  serialport_defs.inc  serialport_dev.f90  serialport_info.f90  serialport_kinds.f90  serialport_list.f90  serialport_types.F90  serialport_utils.c  serialport_utils.f90  serialport_utils.h
